Fixed Media Query layout bug

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,5 +1,10 @@
+
+/* ============================================= */
+/*              Base styles                      */
+/* ============================================= */
+
 * {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #777;
   box-sizing: border-box;
 }
@@ -12,9 +17,11 @@ a {
   text-decoration: none;
 }
 
+
 /* ============================================= */
 /*              Typography                       */
 /* ============================================= */
+
 .headline-primary {
   color: #58e1c1;
   margin-left: 10px;
@@ -40,9 +47,11 @@ a {
   border-radius: 5px;
 }
 
+
 /* ============================================= */
 /*              Grid System                      */
 /* ============================================= */
+
 .container {
   padding: 0 10px;
 }
@@ -66,7 +75,7 @@ a {
 }
 
 .theme.col-2 {
-  background-color: secondary-bg-color;
+  background-color: #fd7856;
 }
 
 .theme.col-3 {
@@ -113,31 +122,39 @@ a {
   flex-basis: 100%;
 }
 
+
 /* ============================================= */
 /*              Navigation                       */
 /* ============================================= */
+
 .nav {
   padding-left: 0;
   flex-basis: 100%;
   display: flex;
   flex-direction: column;
 }
+
 .nav-link {
   text-align: center;
   border-radius: 5px;
   padding: 10px 0;
   display: block;
   width: 100%;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  transition: 
+    background-color .2s ease-in-out, 
+    color .2s ease-in-out;
 }
+
 .nav-link:hover {
   color: #fff;
   background-color: #58e1c1;
 }
 
+
 /* ============================================= */
 /*              Buttons                          */
 /* ============================================= */
+
 .btn {
   margin-top: 15px;
   width: 100%;
@@ -151,46 +168,33 @@ a {
 .default {
   background-color: #51ddfc;
 }
-.default:hover {
-  background-color: #9cecfd;
-}
 
 .error {
   background-color: #e4757a;
-}
-.error:hover {
-  background-color: #f1b5b8;
 }
 
 .info {
   background-color: #927bc1;
 }
-.info:hover {
-  background-color: #bdafd9;
-}
 
 .success {
   background-color: #63cc82;
-}
-.success:hover {
-  background-color: #9ddfb0;
 }
 
 .warning {
   background-color: #fd7856;
 }
-.warning:hover {
-  background-color: #feb4a2;
-}
+
 
 /* ============================================= */
 /*              Forms                            */
 /* ============================================= */
+
 .form {
   flex-basis: 100%;
 }
 
-.input {
+.input{
   display: block;
   width: 94%;
   margin: 10px auto 0;
@@ -200,23 +204,25 @@ a {
 }
 
 .hidden {
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
 }
+
 
 /* ============================================= */
 /*              Images                           */
 /* ============================================= */
+
 .img-avatar {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
-  max-width: 100%;
+  max-width: 100%; 
   max-height: 100%;
 }
 
@@ -236,87 +242,109 @@ a {
   margin-right: auto;
 }
 
+
 /* ============================================= */
 /*              Media Queries                    */
 /* ============================================= */
 @media (min-width: 768px) {
-  .container {
-    max-width: 1400px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .centered {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .row {
-    flex-direction: row;
-  }
-  [class^=col] {
-    display: flex;
-    justify-content: center;
-    margin-top: 0;
-    align-items: center;
-  }
-  [class^=col] + [class^=col] {
-    margin-left: 10px;
-  }
-  .col-1 {
-    flex-basis: 8.33%;
-  }
-  .col-2 {
-    flex-basis: 16.67%;
-  }
-  .col-3 {
-    flex-basis: 25%;
-  }
-  .col-4 {
-    flex-basis: 33.33%;
-  }
-  .col-5 {
-    flex-basis: 41.67%;
-  }
-  .col-6 {
-    flex-basis: 50%;
-  }
-  .col-7 {
-    flex-basis: 58.33%;
-  }
-  .col-8 {
-    flex-basis: 66.67%;
-  }
-  .col-9 {
-    flex-basis: 75%;
-  }
-  .col-10 {
-    flex-basis: 83.33%;
-  }
-  .col-11 {
-    flex-basis: 91.67%;
-  }
-  .col-12 {
-    flex-basis: 100%;
-  }
-  .nav {
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  .nav-link {
-    flex-basis: 100px;
-  }
-  .btn {
-    padding: 10px 30px;
-  }
-  .btn + .btn {
-    margin-left: 10px;
-  }
-  .logo {
-    margin-left: initial;
-    margin-right: initial;
-  }
+
+.container {
+  max-width: 1400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/*# sourceMappingURL=styles.css.map */
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.row {
+  flex-direction: row;
+}
+
+[class^=col] {
+  display: flex;
+  justify-content: center;
+  margin-top: 0;
+  align-items: center;
+}
+
+[class^=col] + [class^=col] {
+  margin-left: 10px;
+}
+
+.col-1 {
+  flex-basis: 8.33%;
+}
+
+.col-2 {
+  flex-basis: 16.67%;
+}
+
+.col-3 {
+  flex-basis: 25.00%;
+}
+
+.col-4 {
+  flex-basis: 33.33%;
+}
+
+.col-5 {
+  flex-basis: 41.67%;
+}
+
+.col-6 {
+  flex-basis: 50.00%;
+}
+
+.col-7 {
+  flex-basis: 58.33%;
+}
+
+.col-8 {
+  flex-basis: 66.67%;
+}
+
+.col-9 {
+  flex-basis: 75.00%
+}
+
+.col-10 {
+  flex-basis: 83.33%;
+}
+
+.col-11 {
+  flex-basis: 91.67%;
+}
+
+.col-12 {
+  flex-basis: 100%;
+}
+
+.nav {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-link {
+  flex-basis: 100px;
+}
+
+.btn {
+  padding: 10px 30px;
+}
+
+.btn + .btn {
+  margin-left: 10px;
+}
+
+.logo {
+  margin-left: initial;
+  margin-right: initial;
+}
+
+}
